Modified templates to display posts from database

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,13 @@
+
+
+
 {
     "python.pythonPath": "C:\\Users\\kaygarr\\Anaconda3\\python.exe",
-    "python.linting.pylintEnabled": true
+    "python.linting.pylintEnabled": true,
+
+   
+  
+
 }
+
+
